Fix: edit buttons on mobile

--- a/inc/templates/default/assets/less/style.less
+++ b/inc/templates/default/assets/less/style.less
@@ -765,6 +765,9 @@
 		.dwqa-answer-form-btn {
 			float: right;
 			margin: 0 0 10px 0;
+			@media(max-width: @screen-phone) {
+				margin-top: 40px;
+			}
 		}
 
 		// Answer post
